[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0.32", features = ["derive"] }
prettytable-rs = "^0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
